feat: added dynamic abyss energy generation logic